@@ -4,6 +4,8 @@ geomfromgeojson_03|POINT(1 1)
 geomfromgeojson_04|LINESTRING(0 0,1 1)
 geomfromgeojson_05|POLYGON((0 0,1 1,1 0,0 0))
 geomfromgeojson_06|MULTIPOLYGON(((0 0,1 1,1 0,0 0)))
+geomfromgeojson_07|MULTIPOLYGON(((0 0,1 1,1 0,0 0)))
+geomfromgeojson_08|MULTIPOLYGON(((0 0,1 1,1 0,0 0)))
 #1434: Next two errors
 ERROR:  Unable to find 'coordinates' in GeoJSON string
 ERROR:  unexpected character (at offset 0)
@@ -28,3 +30,8 @@ geomfromgeojson_srs_2|GEOMETRYCOLLECTION(POINT(100 0),LINESTRING(101 0,102 1))
 geomfromgeojson_srs_3|GEOMETRYCOLLECTION(POINT(100 0),LINESTRING(101 0,102 1))
 geomfromgeojson_srs_4|GEOMETRYCOLLECTION(POINT(100 0),LINESTRING(101 0,102 1))
 #3583|MULTIPOLYGON Z (EMPTY)
+ERROR:  The 'coordinates' in GeoJSON polygon are not sufficiently nested
+#4470.a|POLYGON((0 0),())
+ERROR:  The 'coordinates' in GeoJSON polygon are not sufficiently nested
+#4470.c|MULTIPOLYGON(((0 0),()))
+#4470.d|MULTIPOLYGON Z (EMPTY)
